@@ -1,3 +1,5 @@
+Molerat/hetGla2	Gene/Molerat/hetGla2_genes.gff3.gz	null	null	null	Ont/Molerat/hetGla2/*.gff3*	data_hetGla2	Molerat	hetGla2
+Vervet/chlSab2	Gene/Vervet/chlSab2_genes.gff3.gz	null	null	null	Ont/Vervet/chlSab2/*.gff3*	data_chlSab2	Vervet	chlSab2
 Pig/pig11	Gene/Pig/susScr11_genes.gff3.gz	null	null	null	Ont/Pig/pig11/*.gff3*	data_pig11_1	Pig Sscrofa11.1
 Pig/pig10	Gene/Pig/susScr3_genes.gff3.gz	null	null	null	Ont/Pig/pig10/*.gff3*	data_pig10_2	Pig Sscrofa10.2
 Chinchilla/chinchilla10	Gene/Chinchilla/chiLan1_genes.gff3.gz	null	null	null	Ont/Chinchilla/chinchilla10/*.gff3*	data_cl1_0	Chinchilla	ChiLan1.0
